ghost-site/01-new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myculinaryblog
    app.kubernetes.io/component: myculinaryblog
    app.kubernetes.io/instance: myculinaryblog
    app.kubernetes.io/name: myculinaryblog
    app.kubernetes.io/part-of: myculinaryblog
    app.openshift.io/runtime-namespace: myculinaryblog
  name: myculinaryblog
  namespace: myculinaryblog
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: myculinaryblog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: myculinaryblog
        deploymentconfig: myculinaryblog
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: myculinaryblog-content-env
        image: docker.io/ghost:5.43
        imagePullPolicy: Always
        name: myculinaryblog
        ports:
        - containerPort: 2368
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: myculinaryblog-content
      - envFrom:
        - secretRef:
            name: myculinaryblog-db-env
        image: mysql:8.0
        name: db
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: myculinaryblog-db
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: myculinaryblog
        persistentVolumeClaim:
          claimName: myculinaryblog
      - name: myculinaryblog-db
        persistentVolumeClaim:
          claimName: myculinaryblog-db
