ghost-site/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: myculinaryblog
    app.kubernetes.io/component: myculinaryblog
    app.kubernetes.io/instance: myculinaryblog
    app.kubernetes.io/name: myculinaryblog
    app.kubernetes.io/part-of: myculinaryblog
    app.openshift.io/runtime-version: latest
  name: myculinaryblog
  namespace: myculinaryblog
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 2368-tcp
    port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    app: myculinaryblog
    deploymentconfig: myculinaryblog
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
